Attempted a selection solution using hermite curves

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <script src="vecmath.js"></script>
     <script src="engine.js"></script>
 </head>
-<body>
-    <canvas id=field width=1000 height=1000>
+<body onload="init()">
+    <canvas id=field width=1000 height=1000 onclick="clickhandle(event);">
         HTML 5 is not supported
     </canvas>
 </body>
