--- a/actualGameDev/index.html
+++ b/actualGameDev/index.html
@@ -8,6 +8,8 @@
     <script src="ui.js"></script>
     <script src="combat.js"></script>
     <script src="game.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="player.js"></script>
     <script>
         function canvasResize() {
             var canvas = document.getElementById("field")
