--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Super Galactic Space Conquest 4!</title>
     <script src="client.js"></script>
-    <script src="lib/vec.js"></script>
-    <script src="lib/ship.js"></script>
+    <script src="obj/vec.js"></script>
+    <script src="obj/ship.js"></script>
     <script src="game.js"></script>
     <script src="gameDev.js"></script>
     <style>
