--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="client.js"></script>
     <script src="obj/vec.js"></script>
     <script src="obj/ship.js"></script>
+    <script src="obj/mesh.js"></script>
     <script src="game.js"></script>
     <script src="gameDev.js"></script>
     <style>
